hello-service/src/main/kubefiles/basic-deployment/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: quarkus-hello-demo
  labels:
    name: quarkus-hello-demo
    istio-injection: disabled
