hello-service/src/main/kubefiles/basic-deployment/node-port.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: quarkus-hello-demo
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app: hello-app
    namespace: quarkus-hello-demo
