hello-service/src/main/kubefiles/basic-deployment/ingress-alb.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: quarkus-hello
  namespace: quarkus-hello-demo
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: quarkus-hello
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: quarkus-hello
              servicePort: 8080
